--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "server": "http-server dist"
   },
   "husky": {
     "hooks": {
@@ -20,12 +21,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "http-server": "^0.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.0.1",
     "redux": "^4.0.1",
+    "serve-favicon": "^2.5.0",
     "shortid": "^2.2.15"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "css-loader": "^2.1.1",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.17.0",
+    "favicons-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
@@ -46,8 +50,8 @@
     "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.2.1"
   }
